syntax = "proto3";

package api;

service StatisticsService {
    rpc Reset(Empty) returns (Empty) {}
}

message Empty {
}